--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body{
+  background-color: black;
+}
+
 h1 {
   text-align: center;
   display: block;
@@ -12,7 +16,7 @@ p{
   display: block;
   color: white;
   font-family: 'Lato', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 form{
@@ -33,10 +37,14 @@ button{
   padding: 2px;
   font-family: 'Lato', sans-serif;
   font-size: 20px;
-  background-color: #A9A9A9;
+  background-color: #1ec503;
   border-radius: 12px;
+  border: 2px solid black;
   width: 190px;
-  margin: auto;
+  margin: 0 auto;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.5s;
+
 }
 
 button:hover{
@@ -51,7 +59,7 @@ button:hover{
   top: 0px;
   width: 100%;
   height: 100%;
-  opacity: .85;
+  opacity: .5;
 }
 
 #openLock{
@@ -92,7 +100,7 @@ figure{
 
 .textbox{
   width: 500px;
-  height: 100px;
+  height: 70px;
   text-align: center;
   display: block;
   margin: 0 auto;
@@ -133,4 +141,88 @@ figure{
 
 #result{
   background-color: #dddddd;
+}
+
+.help-tip{
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    text-align: center;
+    background-color: springgreen;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 14px;
+    line-height: 40px;
+    cursor: default;
+}
+
+.help-tip:before{
+    content:'?';
+    font-size: 40px;;
+    font-weight: bold;
+    color: #2F4F4F;
+}
+
+.help-tip:hover p{
+    display:block;
+    transform-origin: 100% 0%;
+
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+
+}
+
+.help-tip p{    /* The tooltip */
+    display: none;
+    text-align: left;
+    background-color: #1E2021;
+    padding: 20px;
+    width: 300px;
+    position: absolute;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    right: -4px;
+    color: #FFF;
+    font-size: 13px;
+    line-height: 1.4;
+}
+
+.help-tip p:before{ /* The pointer of the tooltip */
+    position: absolute;
+    content: '';
+    width:0;
+    height: 0;
+    border:6px solid transparent;
+    border-bottom-color:#1E2021;
+    right:10px;
+    top:-12px;
+}
+
+.help-tip p:after{ /* Prevents the tooltip from being hidden */
+    width:100%;
+    height:40px;
+    content:'';
+    position: absolute;
+    top:-40px;
+    left:0;
+}
+
+/* CSS animation */
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity:0;
+        transform: scale(0.6);
+    }
+
+    100% {
+        opacity:100%;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:100%; }
 }
