--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ button{
   padding: 2px;
   font-family: 'Lato', sans-serif;
   font-size: 20px;
-  background-color: #1ec503;
+  background-color: #BCDBEA;
   border-radius: 12px;
   border: 2px solid black;
   width: 190px;
@@ -157,7 +157,7 @@ figure{
     top: 40px;
     right: 40px;
     text-align: center;
-    background-color: springgreen;
+    background-color: #BCDBEA;
     border-radius: 50%;
     width: 40px;
     height: 40px;
