--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ button{
   font-size: 20px;
   background-color: #BCDBEA;
   border-radius: 12px;
-  border: 2px solid black;
+  border: 1px solid #293d3d;
   width: 190px;
   margin: 0 auto;
   -webkit-transition-duration: 0.4s;
@@ -50,6 +50,7 @@ button{
 button:hover{
   background-color: #293d3d;
   color: white;
+  border: 1px solid white;
 }
 
 #background{
@@ -59,7 +60,7 @@ button:hover{
   top: 0px;
   width: 100%;
   height: 100%;
-  opacity: .5;
+  opacity: .6;
 }
 
 #openLock{
@@ -85,11 +86,15 @@ button:hover{
 
 #backToMenu{
   display: inline-block;
+  bottom: 3px;
+  position: absolute;
 }
 
 #exit{
   display: inline-block;
-  float: right;
+  right: 2px;
+  bottom: 3px;
+  position: absolute;
 }
 
 figcaption{
@@ -109,7 +114,7 @@ figure{
 
 .textbox{
   width: 500px;
-  height: 70px;
+  height: 50px;
   text-align: center;
   display: block;
   margin: 0 auto;
